# AoC2022

./: .env  Cargo.toml
