[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10.5"
reqwest = { version = "0.11", features = ["cookies"] }
dotenv = "0.15"
tokio = {version = "1.23", features = ["full"] }
